--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,8 +1,10 @@
 .profile__add-button {
     width: 150px;
     height: 50px;
-    background: url(../../../images/add-button.png) center center no-repeat;
+    background: url(../../../images/add-button.svg) center center no-repeat;
     background-size: inherit;
     border: 2px solid #fff;
     margin: 0 0 0 auto;
+    box-sizing: border-box;
+    cursor: pointer;
 }
