--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,9 @@
 .profile__edit-button {
-    background: url(../../../images/edit-button.png) center center no-repeat;
-    background-size: cover;
+    background: url(../../../images/edit-button.svg) center center no-repeat;
+    background-size: 10px 10px;
     width: 24px;
     height: 24px;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    cursor: pointer;
 }
