--- a/pages/index.css
+++ b/pages/index.css
@@ -11,3 +11,11 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+
+@import url(../blocks/post/post.css);
+@import url(../blocks/post/__container/post__container.css);
+@import url(../blocks/post/__item/post__item.css);
+@import url(../blocks/post/__image/post__image.css);
+@import url(../blocks/post/__description/post__description.css);
+@import url(../blocks/post/__subscription/post__subscription.css);
+@import url(../blocks/post/__like/post__like.css);
