--- a/pages/index.css
+++ b/pages/index.css
@@ -19,3 +19,6 @@
 @import url(../blocks/post/__description/post__description.css);
 @import url(../blocks/post/__subscription/post__subscription.css);
 @import url(../blocks/post/__like/post__like.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__author/footer__author.css);
