--- a/blocks/post/__like/post__like.css
+++ b/blocks/post/__like/post__like.css
@@ -1,9 +1,15 @@
 .post__like {
     background: url(../../../images/like-button.svg) center center no-repeat;
-    background-size: cover;
+    background-size: contain;
     width: 22px;
     height: 19px;
     border: none;
     margin: 0 0 0 auto;
     cursor: pointer;
+    box-sizing: border-box;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.post__like:hover {
+    opacity: .5;
 }
