--- a/blocks/post/__container/post__container.css
+++ b/blocks/post/__container/post__container.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     display: grid;
-    gap: 17px 20px;
-    grid-template-columns: repeat(3, 1fr);
+    gap: 20px 17px;
+    grid-template-columns: repeat(auto-fill, 282px);
+    justify-content: center;
 }
