--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,4 +7,9 @@
     margin: 0 0 0 auto;
     box-sizing: border-box;
     cursor: pointer;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.profile__add-button:hover {
+    opacity: .6;
 }
