--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -6,4 +6,9 @@
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
     cursor: pointer;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.profile__edit-button:hover {
+    opacity: .6;
 }
