--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,3 +2,10 @@
     max-width: calc(100% - 400px);
     margin: 67px auto 60px;
 }
+
+@media (max-width: 1024px) {
+    .footer {
+        max-width: calc(100% - 19px * 2);
+        margin: 48px auto 36px;
+    }
+}
