--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,3 +3,10 @@
     height: 33px;
     object-fit: cover;
 }
+@media (max-width: 1024px) {
+    .header__logo {
+        margin-left: 27px;
+        width: 103.74px;
+        height: 24.4px;
+    }
+}
