--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,11 @@
     border-bottom: 1px solid #545454;
     opacity: .7;
 }
+
+@media (max-width: 1024px) {
+    .header {
+        max-width: 1024px;
+        min-height: 56px;
+        margin: 28px 0 0;
+    }
+}
