--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,3 +4,12 @@
     line-height: 29px;
     margin: 0 0 54px;
 }
+
+@media (max-width: 1024px) {
+    .popup__title {
+        font-size: 18px;
+        line-height: 22px;
+        text-align: center;
+        margin: 0 0 75px;
+    }
+}
