--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,8 +5,8 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .6);
-    opacity: 0;
-    visibility: hidden;
+    /*opacity: 0;
+    visibility: hidden;*/
     display: flex;
     justify-content: center;
     align-items: center;
