--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -13,3 +13,10 @@
 .profile__add-button:hover {
     opacity: .6;
 }
+
+@media (max-width: 1024px) {
+    .profile__add-button {
+        margin: 0;
+        width: 282px;
+    }
+}
