--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -4,3 +4,9 @@
     height: 120px;
     margin-right: 30px;
 }
+
+@media (max-width: 1024px) {
+    .profile__avatar {
+        margin: 0;
+    }
+}
