--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,7 +1,15 @@
 .profile__info {
     display: grid;
-    column-gap: 18px;
-    row-gap: 16px;
+    gap: 18px 16px;
     grid-template-columns: 1fr 24px;
     align-items: center;
+    margin-right: 30px;
+}
+
+@media (max-width: 1024px) {
+    .profile__info {
+        max-width: calc(100% - 19px * 2);
+        margin: 26px auto 36px;
+        gap: 14px 10px;
+    }
 }
