--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,3 +4,11 @@
     align-items: center;
     margin: 40px auto 51px;
 }
+
+@media (max-width: 1024px) {
+    .profile {
+        max-width: 100%;
+        flex-direction: column;
+        margin: 42px auto 36px;
+    }
+}
