--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -6,3 +6,9 @@
     padding: 0;
     font-family: 'Inter', serif;
 }
+
+@media (max-width: 1024px) {
+    .root {
+        max-width: 1024px;
+    }
+}
