feat: javascript added

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -8,6 +8,7 @@
     height: 32px;
     border: none;
     transition: opacity 0.2s ease-in-out;
+    cursor: pointer;
 }
 
 .popup__close-button:hover {
