--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input {
-    opacity: 0.2;
+
     border: 0;
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
     width: 100%;
     height: 27px;
     box-sizing: border-box;
@@ -11,6 +11,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    color: #000;
 }
 
 @media (max-width: 1024px) {
