fix: ixed some bugs

--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -9,6 +9,7 @@
     line-height: 22px;
     text-align: center;
     margin-top: 18px;
+    padding: 0;
     transition: opacity 0.2s ease-in-out;
     cursor: pointer;
 }
