--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,8 +3,7 @@
     min-height: 74px;
     display: flex;
     margin: 45px auto 0;
-    border-bottom: 1px solid #545454;
-    opacity: .7;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media (max-width: 1024px) {
