--- a/blocks/post/__like/post__like.css
+++ b/blocks/post/__like/post__like.css
@@ -5,6 +5,7 @@
     height: 19px;
     border: none;
     margin: 0 0 0 auto;
+    padding: 0;
     cursor: pointer;
     box-sizing: border-box;
     transition: opacity 0.2s ease-in-out;
