--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -6,9 +6,17 @@
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
     cursor: pointer;
+    padding: 0;
     transition: opacity 0.2s ease-in-out;
 }
 
 .profile__edit-button:hover {
     opacity: .6;
+}
+
+@media (max-width: 1024px) {
+    .profile__edit-button {
+        height: 18px;
+        width: 18px;
+    }
 }
