--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -4,7 +4,7 @@
     color: #fff;
     margin: 0 auto;
     padding: 0;
-    font-family: 'Inter', serif;
+    font-family: 'Inter', sans-serif;
 }
 
 @media (max-width: 1024px) {
