--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -5,3 +5,10 @@
     color: #545454;
     margin: 0;
 }
+
+@media (max-width: 1024px) {
+    .footer__author {
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
