--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,8 +1,8 @@
 .popup__container {
     background-color: #fff;
-    color: #111;
+    color: #000;
     width: 430px;
-    height: 330px;
+    min-height: 330px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     box-sizing: border-box;
