--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -12,6 +12,7 @@
     padding: 0;
     transition: opacity 0.2s ease-in-out;
     cursor: pointer;
+    border: none;
 }
 
 .popup__save-button:hover {
