--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -8,3 +8,10 @@
     white-space: nowrap;
     overflow: hidden;
 }
+@media (max-width: 1024px) {
+    .profile__description {
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+    }
+}
