--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,7 @@
 .profile__info {
     display: grid;
     gap: 18px 16px;
+    max-width: calc(100% - 330px);
     grid-template-columns: 1fr 24px;
     align-items: center;
     margin-right: 30px;
