--- a/pages/index.css
+++ b/pages/index.css
@@ -15,9 +15,9 @@
 @import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 
+@import url(../blocks/posts/posts.css);
+@import url(../blocks/posts/__container/posts__container.css);
 @import url(../blocks/post/post.css);
-@import url(../blocks/post/__container/post__container.css);
-@import url(../blocks/post/__item/post__item.css);
 @import url(../blocks/post/__image/post__image.css);
 @import url(../blocks/post/__description/post__description.css);
 @import url(../blocks/post/__subscription/post__subscription.css);
