--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,10 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .6);
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility .3s linear, opacity .3s linear;
     justify-content: center;
     align-items: center;
+    display: flex;
 }
