--- a/pages/index.css
+++ b/pages/index.css
@@ -25,7 +25,6 @@
 @import url(../blocks/post/__like/post__like.css);
 @import url(../blocks/post/__like/_active/post__like_active.css);
 
-
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
 
@@ -37,3 +36,8 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__image-container/popup__image-container.css);
+@import url(../blocks/popup/__figure-block/popup____figure-block.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/_type/popup_type_image.css);
