--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -1,11 +1,8 @@
 .popup__input-error {
-    font-weight: 400;
+    margin: 5px 0 0 0;
     font-size: 12px;
     line-height: 15px;
     color: #FF0000;
     opacity: 0;
-    position: absolute;
-    top: calc(100% + 5px);
-    left: 0;
-    transition: 0.3s;
+    transition: 0.2s;
 }
