--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -8,7 +8,7 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    margin-top: 18px;
+    margin: 16px 0 0 0;
     padding: 0;
     transition: opacity 0.2s ease-in-out;
     cursor: pointer;
