--- a/src/blocks/post/__description/post__description.css
+++ b/src/blocks/post/__description/post__description.css
@@ -1,6 +1,6 @@
 .post__description {
     display: flex;
     justify-content: space-around;
-    margin: 25px 20px;
+    margin: 20px;
     align-items: center;
 }
