--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -22,8 +22,10 @@
 @import url(../blocks/post/__image/post__image.css);
 @import url(../blocks/post/__description/post__description.css);
 @import url(../blocks/post/__subscription/post__subscription.css);
+@import url(../blocks/post/__like-container/post__like-container.css);
 @import url(../blocks/post/__like/post__like.css);
 @import url(../blocks/post/__like/_active/post__like_active.css);
+@import url(../blocks/post/__like-count/post__like-count.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
