--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -34,6 +34,7 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__small-container/popup__small-container.css);
+@import url(../blocks/popup/__avatar-container/popup__avatar-container.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__fieldset/popup__fieldset.css);
