--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,13 +1,10 @@
 .profile__avatar {
-    border-radius: 50%;
     width: 120px;
     height: 120px;
     margin-right: 30px;
-    object-fit: cover;
 }
 
-@media (max-width: 1024px) {
-    .profile__avatar {
-        margin: 0;
-    }
+.profile__avatar:hover {
+    background: url(../../../images/edit-button.svg) center center no-repeat;
+    background-size: 26px 26px;
 }
