--- a/main.css
+++ b/main.css
@@ -5,7 +5,8 @@
 .header__logo{height:33px;-o-object-fit:cover;object-fit:cover;width:142px}@media (max-width:1024px){.header__logo{height:24px;margin-left:27px;width:104px}}
 .main{margin:0 auto;max-width:calc(100% - 400px)}@media (max-width:1024px){.main{max-width:100%}}
 .profile{align-items:center;display:flex;margin:40px auto 51px}@media (max-width:1024px){.profile{flex-direction:column;margin:42px auto 36px}}
-.profile__avatar{border-radius:50%;height:120px;margin-right:30px;width:120px}@media (max-width:1024px){.profile__avatar{margin:0}}
+.profile__avatar{height:120px;margin-right:30px;width:120px}.profile__avatar:hover{background:url(8667ac4a523e8fc42e59.svg) 50% no-repeat;background-size:26px 26px}
+.profile__avatar-image{border-radius:50%;height:100%;-o-object-fit:cover;object-fit:cover;transition:opacity .2s ease-in-out;width:100%}.profile__avatar-image:hover{cursor:pointer;opacity:.2}@media (max-width:1024px){.profile__avatar-image{margin:0}}
 .profile__info{align-items:center;display:grid;gap:18px 16px;grid-template-columns:1fr 24px;margin-right:30px;max-width:calc(100% - 330px)}@media (max-width:1024px){.profile__info{gap:14px 10px;margin:26px auto 36px;max-width:calc(100% - 38px)}}
 .profile__user-name{font-size:42px;font-weight:500;line-height:48px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:1024px){.profile__user-name{font-size:27px;line-height:33px;text-align:center}}
 .profile__edit-button{background:url(8667ac4a523e8fc42e59.svg) 50% no-repeat;background-size:10px 10px;border:1px solid #fff;box-sizing:border-box;cursor:pointer;height:24px;padding:0;transition:opacity .2s ease-in-out;width:24px}.profile__edit-button:hover{opacity:.6}@media (max-width:1024px){.profile__edit-button{background-size:7.5px;height:18px;width:18px}}
@@ -16,19 +17,24 @@
 .post{background-color:#fff;border-radius:10px;height:361px;overflow:hidden;position:relative}
 .post__delete{background:url(cbc09a894bdd4c956365.svg) 50% no-repeat;background-size:contain;border:none;cursor:pointer;height:19px;padding:0;position:absolute;right:20px;top:20px;transition:opacity .2s ease-in-out;width:18px}.post__delete:hover{opacity:.6}
 .post__image{cursor:pointer;display:block;height:282px;-o-object-fit:cover;object-fit:cover;width:100%}
-.post__description{align-items:center;display:flex;justify-content:space-around;margin:25px 20px}
+.post__description{align-items:center;display:flex;justify-content:space-around;margin:20px}
 .post__subscription{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:0 auto 0 0;max-width:200px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.post__like-container{display:flex;flex-direction:column}
 .post__like{background:url(87ed371465c7a6a1cd01.svg) 50% no-repeat;background-size:contain;border:none;box-sizing:border-box;cursor:pointer;height:19px;margin:0 0 0 auto;padding:0;transition:opacity .2s ease-in-out;width:22px}.post__like:hover{opacity:.5}
 .post__like_active{background:url(fe17a515669479b1e649.svg) 50% no-repeat;opacity:1}
+.post__like-count{color:#000;font-size:13px;line-height:16px;margin:3px 0 0;text-align:center}
 .footer{margin:67px auto 60px;max-width:calc(100% - 400px)}@media (max-width:1024px){.footer{margin:48px auto 36px;max-width:calc(100% - 38px)}}
 .footer__author{color:#545454;font-size:18px;font-weight:400;line-height:22px;margin:0}@media (max-width:1024px){.footer__author{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.6);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:visibility .3s linear,opacity .3s linear;visibility:hidden;width:100%}
 .popup_opened{opacity:1;visibility:visible}
 .popup__container{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;color:#000;min-height:330px;position:relative;width:430px}@media (max-width:1024px){.popup__container{max-width:calc(100% - 38px);min-width:282px}}
+.popup__small-container{min-height:181px;padding:34px 36px}
+.popup__avatar-container{min-height:272px}
 .popup__close-button{background:url(2ceb783afbab75916ddc.svg) 50% no-repeat;background-size:cover;border:none;cursor:pointer;height:32px;padding:0;position:absolute;right:-40px;top:-40px;transition:opacity .2s ease-in-out;width:32px}.popup__close-button:hover{opacity:.6}@media (max-width:1024px){.popup__close-button{height:20px;right:0;top:-36px;width:20px}}
 .popup__form{box-sizing:border-box;display:flex;flex-direction:column;height:100%;padding:34px 36px 37px}@media (max-width:1024px){.popup__form{padding:25px 22px}}
 .popup__fieldset{border:none;display:flex;flex-direction:column;height:100%;justify-content:space-between;margin:0;padding:0}
 .popup__title{font-size:24px;font-weight:900;line-height:29px;margin:0 0 40px}@media (max-width:1024px){.popup__title{font-size:18px;line-height:22px;margin:0 0 65px;text-align:center}}
+.popup__confirmation-title{margin-bottom:38px}
 .popup__label{display:flex;flex-direction:column;min-height:62px}
 .popup__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);box-sizing:border-box;color:#000;font-size:14px;height:27px;line-height:17px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:100%}@media (max-width:1024px){.popup__input{font-size:14px;line-height:17px}}
 .popup__input_type_error{border-bottom-color:red}
@@ -36,6 +42,7 @@
 .popup__input-error_active{opacity:1}
 .popup__save-button{background:#000;border:none;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-weight:400;height:50px;line-height:22px;margin:16px 0 0;padding:0;text-align:center;transition:opacity .2s ease-in-out;width:100%}.popup__save-button:hover{opacity:.8}@media (max-width:1024px){.popup__save-button{font-size:14px;height:46px;line-height:17px;margin-top:15px}}
 .popup__save-button_inactive{background-color:transparent;border:1px solid rgba(0,0,0,.2);color:rgba(0,0,0,.2);pointer-events:none;-webkit-user-select:none;-moz-user-select:none;user-select:none}
+.popup__confirmation-button{margin:0}
 .popup__image-container{position:relative}
 .popup__figure-block{margin:0;max-height:75vh;max-width:75vw}
 .popup__image{display:block;max-height:75vh;max-width:75vw;-o-object-fit:contain;object-fit:contain}
